# gh200-trading-system

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GH200_Trading_System_Architecture.md  Makefile  README.md  README_SCHEDULING.md  README_SYSTEM_EXPORTER.md  analyze_model_metrics.py  analyze_parquet.py  cmake_install.cmake  create_models.py  inference_service.py  install_dependencies.sh  install_services.sh  market_calendar.sh  requirements.txt  reset_and_train_gbdt.py  set_active_models.py  setup.sh  setup_and_run.sh  setup_ngrok_domain.sh  setup_ngrok_only.sh  start.sh  start_exporter_api.sh  start_exporter_service.sh  start_system.sh  start_trainer.sh  stop.sh  stop_exporter_service.sh  stop_system.sh  stop_trainer.sh  test_redis.py  trading_system
api/: api_server.py
config/: __init__.py  config_loader.py  fast_exit_strategy_settings.json  hft_model_settings.json  ngrok_tunnels.yml  polygon_provider_settings.json  system.yaml  system_settings.json  system_simple.yaml  trading.yaml  trading_simple.yaml
data/: __init__.py  polygon_market_data_provider.py
data/cache/: cache_index.json
data/cache/snapshots/: 2025-02-12.json  2025-02-13.json  2025-02-14.json  2025-02-15.json  2025-02-16.json  2025-02-17.json  2025-02-18.json  2025-02-19.json  2025-02-20.json  2025-02-21.json  2025-02-22.json  2025-02-23.json  2025-02-24.json  2025-02-25.json  2025-02-26.json  2025-02-27.json  2025-02-28.json  2025-03-01.json  2025-03-02.json  2025-03-03.json  2025-03-04.json  2025-03-05.json  2025-03-06.json  2025-03-07.json  2025-03-08.json  2025-03-09.json  2025-03-10.json  2025-03-11.json  2025-03-12.json  2025-03-13.json  2025-03-14.json  2025-03-15.json  2025-03-16.json  2025-03-17.json  2025-03-18.json  2025-03-19.json  2025-03-20.json  2025-03-21.json  2025-03-22.json  2025-03-23.json  (+51 more)
docs/: SYSTEM_HARDWARE.md  __init__.py  optimization_plan.md
examples/: polygon_snapshot_example.cpp
examples/docs/: HYBRID_HFT_ARCHITECTURE.md  SYSTEM_HARDWARE.md
include/trading_system/common/: config.h  logging.h
include/trading_system/cuda/: parser.h
include/trading_system/data/: market_data.h  polygon_client.h  rest_client.h  websocket_client.h
include/trading_system/execution/: broker_client.h  execution_engine.h  order.h
include/trading_system/ml/: axial_attention_model.h  exit_optimization.h  gbdt_model.h  inference.h  lstm_gru_model.h  market_snapshot_processor.h  model.h  model_trainer.h  signals.h
include/trading_system/monitoring/: metrics_publisher.h
include/trading_system/risk/: position.h  risk_manager.h
memory/: redis_client.py
ml/: __init__.py  fast_exit_strategy.py  hft_model.py
ml/exit/: api.py  exit_strategy.py  models.py
models/: model_registry.json  model_registry.json.bak  training_config.json
models/axial_attention/: model_config.json
models/gbdt/: fast_path_gbdt.model  model_config.json
models/gbdt/v2025.513.401/: latency_profile.json  metadata.json  model.pkl  performance.json
models/gbdt/v2025.513.403/: latency_profile.json  (+3 more)
models/lstm_gru/: model_config.json
models/training_summaries/: training_summary_2025.513.403.json
monitoring/: README.md  __init__.py  dashboard_server.js  package-lock.json  package.json  real_metrics.js  system_exporter.py
monitoring/api/: metrics_api.js  metrics_collector.js  package-lock.json  package.json
monitoring/collectors/: alpaca_portfolio_collector.py  hardware_metrics_collector.py  log_collector.py  notification_collector.py  system_metrics_collector.py
monitoring/dashboard/: index.html
monitoring/log/: __init__.py  logging.py
monitoring/schedule/: trading_scheduler.py  trainer_scheduler.py
monitoring/scripts/: install_deps.sh  setup_tunnel.sh  ssh_tunnel.sh  start_monitoring.sh  stop_monitoring.sh  stop_tunnel.sh
monitoring/shared/: config.js  db_config.js  metrics_buffer.js
redis_integration/: __init__.py  example_usage.py  redis_client.py  start_redis.sh
redis_service/: __init__.py  redis.conf  universal_redis_memory.py
scripts/: TRADING_SCHEDULER_README.md  install_json_deps.sh  manage_trading_scheduler.sh  secure_api_keys.sh  setup_databases.sh  setup_json_lib.sh  setup_simdjson_lib.sh  setup_system.sh  setup_trading_scheduler.sh  trading-scheduler.service  trading_scheduler.py
settings/: __init__.py  system.yaml
src/: __init__.py  main.cpp
src/api/: __init__.py  api_server.py  ngrok_tunnel.py  start_exporter_api.py
src/common/: config.cpp  logging.cpp
src/cuda/: parser.cu
src/data/: __init__.py  market_data.cpp  market_data_processor.py  polygon_client.cpp  polygon_rest_api.py  polygon_websocket.py  rest_client.cpp  test_polygon_clients.py  websocket_client.cpp
src/execution/: __init__.py  alpaca_execution.py  alpaca_rest_api.py  broker_client.cpp  execution_engine.cpp  order.cpp  paper_trading_broker_client.cpp  paper_trading_broker_client.h  test_alpaca_execution.py
src/ml/: __init__.py  axial_attention_model.cpp  axial_attention_model.py  exit_optimization.cpp  exit_optimization.py  gbdt_model.cpp  gbdt_model.py  inference.cpp  lstm_gru_model.cpp  lstm_gru_model.py  market_snapshot_processor.cpp  model.cpp  model_trainer.cpp  model_trainer_main.cpp  risk_manager.py
src/monitoring/: metrics_publisher.cpp  system_exporter.py
src/risk/: risk_manager.cpp
systemd/: system-exporter-api.service  trading-scheduler.service  trainer-scheduler.service
ta-lib/: Makefile  bin  config.status  libtool
ta-lib/src/: Makefile
training_data/: fetch_market_snapshot.py  generate_hft_training_data.py  prepare_int8_calibration_data.py
training_data/cache/: cache_index.json
training_data/hft_training/: hft_features_20250513_181541_1789_metadata.json  hft_features_20250513_181541_1789_samples.csv  hft_features_20250513_181541_1789_samples.npy  hft_features_20250513_181541_1789_stats.json
training_data/market_snapshots/: market_snapshot_20250513_165031_1497_tickers.json  market_snapshot_20250513_165500_1513_tickers.json  market_snapshot_20250513_165537_1517_tickers.json  market_snapshot_20250513_165923_1536_tickers.json  market_snapshot_20250513_174950_0_tickers.json
(+1508 files in other folders)
